# ChangeLog for media-video/mplayer
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/mplayer/ChangeLog,v 1.394 2006/06/28 04:20:08 tcort Exp $

  28 Jun 2006; Thomas Cort <tcort@gentoo.org> mplayer-1.0_pre8.ebuild:
  Stable on alpha wrt Bug #136520.

  27 Jun 2006; Guy Martin <gmsoft@gentoo.org> mplayer-1.0_pre8.ebuild,
  mplayer-1.0.20060217.ebuild, mplayer-1.0.20060408.ebuild,
  mplayer-1.0.20060415.ebuild:
  Stable on hppa.

  25 Jun 2006; Luca Barbato <lu_zero@gentoo.org> mplayer-1.0_pre8.ebuild:
  phase out nls, unicode triggers iconv dep

  25 Jun 2006; Luca Barbato <lu_zero@gentoo.org> mplayer-1.0_pre8.ebuild:
  set charset to noconv if you disable unicode

  25 Jun 2006; Luca Barbato <lu_zero@gentoo.org> mplayer-1.0_pre8.ebuild:
  make debug more useful

  22 Jun 2006; Fabian Groffen <grobian@gentoo.org> mplayer-1.0_pre8.ebuild:
  Marked ~ppc-macos, I'm stunned (bug #107795)

  19 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  mplayer-1.0.20060102.ebuild, mplayer-1.0.20060217.ebuild,
  mplayer-1.0.20060302.ebuild, mplayer-1.0.20060408.ebuild,
  mplayer-1.0.20060415.ebuild:
  -sparc snapshot versions to let pre8 win

  16 Jun 2006; Jason Wever <weeve@gentoo.org> mplayer-1.0_pre8.ebuild:
  Stable on SPARC wrt bug #136520.

  16 Jun 2006; Patrick McLean <chutzpah@gentoo.org> mplayer-1.0_pre8.ebuild:
  Stable on amd64 (bug #136520).

  14 Jun 2006; Luca Barbato <lu_zero@gentoo.org> mplayer-1.0_pre8.ebuild,
  mplayer-1.0.20060102.ebuild, mplayer-1.0.20060217.ebuild,
  mplayer-1.0.20060302.ebuild, mplayer-1.0.20060408.ebuild,
  mplayer-1.0.20060415.ebuild:
  pre8 stable for ppc and ppc64

  14 Jun 2006; Luca Barbato <lu_zero@gentoo.org>
  mplayer-1.0.20060102.ebuild, mplayer-1.0.20060217.ebuild,
  mplayer-1.0.20060302.ebuild, mplayer-1.0.20060408.ebuild,
  mplayer-1.0.20060415.ebuild: